--- a/index.htm
+++ b/index.htm
@@ -47,16 +47,16 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#token">Token</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Uniswap</a></li>
+          <li><a class="nav-link scrollto" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Pancakeswap</a></li>
           <li><a class="nav-link scrollto " href="#faq">FAQ</a></li>
           <li class="dropdown"><a href="#"><span>Links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Uniswap</a></li>
-	      <li><a href="https://t.me/DogelonMars" target="_blank">Telegram</a></li>
-	      <li><a href="javascript:if(confirm(%27https://twitter.com/DogelonMars  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://twitter.com/DogelonMars%27" tppabs="https://twitter.com/DogelonMars" target="_blank">Twitter</a></li>
-              <li><a href="javascript:if(confirm(%27https://coinmarketcap.com/currencies/dogelon/  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coinmarketcap.com/currencies/dogelon/%27" tppabs="https://coinmarketcap.com/currencies/dogelon/" target="_blank">CoinMarketCap</a></li>
-	      <li><a href="javascript:if(confirm(%27https://coingecko.com/en/coins/dogelon-mars  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coingecko.com/en/coins/dogelon-mars%27" tppabs="https://coingecko.com/en/coins/dogelon-mars" target="_blank">CoinGecko</a></li>
-              <li><a href="https://etherscan.io/token/0x761D38e5ddf6ccf6Cf7c55759d5210750B5D60F3" target="_blank">Etherscan</a></li>
+              <li><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Pancakeswap</a></li>
+	      <li><a href="https://t.me/capitantoken" target="_blank">Telegram</a></li>
+	      <li><a href="https://twitter.com/capitantoken" target="_blank">Twitter</a></li>
+              <li><a href="http://capitantoken.cf/client-7.jpg" target="_blank">CoinMarketCap</a></li>
+	      <li><a href="http://capitantoken.cf/client-7.jpg" target="_blank">CoinGecko</a></li>
+              <li><a href="https://bscscan.com/token/0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Bscscan</a></li>
 				</ul>
           </li>
         </ul>
@@ -93,39 +93,39 @@
         <div class="row">
 
           <div class="col-lg-2 col-md-4 col-6">
-	    <a id="link_uniswap" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">
+	    <a id="link_pancakeswap" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">
               <img src="client-1.png" tppabs="http://dogelon.io/assets/img/clients/client-1.png" class="img-fluid" alt="" data-aos="zoom-in">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-	    <a id="link_telegram" href="https://t.me/DogelonMars" target="_blank">
+	    <a id="link_telegram" href="https://t.me/capitantoken" target="_blank">
             <img src="client-2.png" tppabs="http://dogelon.io/assets/img/clients/client-2.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
 		</a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-	    <a id="link_twitter" href="javascript:if(confirm(%27https://twitter.com/DogelonMars  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://twitter.com/DogelonMars%27" tppabs="https://twitter.com/DogelonMars" target="_blank">
+	    <a id="link_twitter" href="https://twitter.com/capitantoken" target="_blank">
             <img src="client-3.png" tppabs="http://dogelon.io/assets/img/clients/client-3.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
 		</a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-	    <a id="link_cmc" href="javascript:if(confirm(%27https://coinmarketcap.com/currencies/dogelon/  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coinmarketcap.com/currencies/dogelon/%27" tppabs="https://coinmarketcap.com/currencies/dogelon/" target="_blank">
+	    <a id="link_cmc" href="http://capitantoken.cf/client-7.jpg" target="_blank">
             <img src="client-4.png" tppabs="http://dogelon.io/assets/img/clients/client-4.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="300">
 		</a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-	    <a id="link_coingecko" href="javascript:if(confirm(%27https://coingecko.com/en/coins/dogelon-mars  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coingecko.com/en/coins/dogelon-mars%27" tppabs="https://coingecko.com/en/coins/dogelon-mars" target="_blank">
+	    <a id="link_coingecko" href="http://capitantoken.cf/client-7.jpg" target="_blank">
             <img src="client-5.png" tppabs="http://dogelon.io/assets/img/clients/client-5.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="400">
 		</a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
 
-	    <a id="link_etherscan" href="https://etherscan.io/token/0x761D38e5ddf6ccf6Cf7c55759d5210750B5D60F3" target="_blank">
-            <img src="client-6.png" tppabs="http://dogelon.io/assets/img/clients/client-6.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
+	    <a id="link_etherscan" href="https://bscscan.com/token/0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">
+            <img src="assets/img/clients/bscscan.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
 		</a>
           </div>
 
@@ -143,13 +143,10 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
-	     <p><strong>50% of token supply burned to Vitalik as a gesture of peace. </strong></p>
-	     <p>Following the path of the Shiba Inu, half of the Dogelon (ELON) token supply was immediately burned to Vitalik Buterin, to ensure a fair distribution from the very start.</p>
-          </div>
+          
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
-	     <p><strong>50% of token supply permanently locked in Uniswap liquidity pool.</strong> </p>
-	     <p>Half of the token supply was immediately added to the Uniswap ELON and ETH pair then <a href="javascript:if(confirm(%27https://etherscan.io/tx/0x968cb7688f70ed0e078d2e2aa7e98c2ccb8e4460e17fa8aa40447ce8836857d6  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://etherscan.io/tx/0x968cb7688f70ed0e078d2e2aa7e98c2ccb8e4460e17fa8aa40447ce8836857d6%27" tppabs="https://etherscan.io/tx/0x968cb7688f70ed0e078d2e2aa7e98c2ccb8e4460e17fa8aa40447ce8836857d6" target="_blank">locked forever</a>. This ensures there is no way to remove any starting liquidity from the Uniswap pool therefore removing any possibility of initial liquidity drawdown by the devs.</p>
+	     <p><strong>50% of token supply permanently locked in Pancakeswap liquidity pool.</strong> </p>
+	     <p>Half of the token supply was immediately added to the Pancakeswap CPT and BNB pair then <a href="https://bscscan.com/token/0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">locked forever</a>. This ensures there is no way to remove any starting liquidity from the Pancakeswap pool therefore removing any possibility of initial liquidity drawdown by the devs.</p>
           </div>
         </div>
 
@@ -168,30 +165,23 @@
 Dear Earth Citizens,
 <br/><br/>
 
-As you may know, I have dedicated my life to ensuring that humanity becomes a multi-planetary species.
-
-This involves work on four front: interplanetary flight, terraforming the planet, sending settlers, and creating an interplanetary currency.
-
-I am excited to announce today the launch of our forefront in our mission to Mars. The first interplanetary currency: Dogelon.
-
+As you know, sea transportation constitutes 86% of world trade today.
 
 <br/><br/>
-Technically, it is is a fork of Dogecoin, in the same sense that a knife is a fork of a spoon.
 
-I have named it after the capital city of Mars: Dogelon (pronounced Dog-a-lon, not Doge Elon because that would be arrogant).
+Sea transport is a very cheap mode of transport. 
 
-The ticker is Dogelon (ELON), which should help prevent any confusion.
 
-I am launching this currency today, in anticipation of bringing the first settlers to Mars, for a very specific reason: To help people take the trip with me.
-
-A lot of good people have hopes of one day reaching the Moon. 
+According to the data of 2021,sea transportation is 3 times more economical than rail, 7 times more economical than road and 21 times more economical than air transportation. 
 
 <br/><br/>
-In my opinion, of course, this is a very low aspiration. We want to reach Mars and beyond.
 
-However, many of those good people are rugged, or buy scam tokens that can't be sold.
+We think that this cheap and huge amount of money is circulating industry needs crypto technology and we will do our best to solve this.
 
-For this reason, the Dogelon community pledges to send tokens over time to victims of rugs and scams, so that the worst day of their trading life can be turned into their best. And after some time, they will be able to join us on our regular flights to Mars....
+<br/><br/>
+
+The total market capacity of the Maritime Industry is USD 220.18 Bn.
+
 	  </p>
       </div>
 
@@ -209,17 +199,11 @@ For this reason, the Dogelon community pledges to send tokens over time to victi
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>What is Dogelon?</h4>
+            <h4>What is Capitan Token ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-		Think of Dogelon as a fair universal currency for the people. Everywhere.
-
-		It is not a meme currency like Doge, Shiba, or Cardano. This is a real project that will be constantly evolving. 
-
-		And that begins with undoing the damage done by scammers, schemers, and bad actors. 
-
-		You may have some questions.
+		A decentralized coin created for use in the maritime industry
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -231,7 +215,7 @@ For this reason, the Dogelon community pledges to send tokens over time to victi
           </div>
           <div class="col-lg-7">
 		  <p>
-No, as I mentioned, it’s a “fair” universal currency. There was no presale. No one has tokens. Besides Vitalik Buterin. I sent half to him. As a thank you.
+No, as I mentioned, it’s a “fair” universal currency. There was no presale. No one has tokens.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -239,14 +223,14 @@ No, as I mentioned, it’s a “fair” universal currency. There was no presale
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Where can I get Dogelon?</h4>
+            <h4>Where can I get Capitan Token ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
 	    
-The Uniswap link is here: <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc">Uniswap</a>.<br/>
+The Pancakeswap link is here: <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc">Pancakeswap</a>.<br/>
 
-The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6Cf7c55759d5210750B5D60F3" target="_blank">0x761d38e5ddf6ccf6cf7c55759d5210750b5d60f3</a>.
+The contract address is: <a href="https://bscscan.com/token/0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">0xef166742d1d59c39b8db51aab3f7fb16b8f870bc</a>.
 
 <br/>
 
@@ -262,13 +246,18 @@ The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6C
           </div>
           <div class="col-lg-7">
             <p>
-	    1,000,000,000,000,000 ELON were created.<br/>
+	    500,000,000 CPT were created.<br/>
 
-	    50 percent were sent to Vitalik Buterin.<br/>
+	    50 percent were permanently locked with BSC on Pancakeswap.<br/>
 
-	    50 percent were permanently locked with Ether on Uniswap.<br/>
+	    20 percent have in Founder's wallet.<br/>
+		
+		10 percent sent  to our Partnership.<br/>
+		
+		10 percent sent  to  our Team.<br/>
+		
 
-	    The community is encouraged to airdrop Dogelon tokens to victims of rugs and scams. It’s important to give back and build community trust. <br/>
+	    The community is encouraged to airdrop Capitan tokens to victims of rugs and scams. It’s important to give back and build community trust. <br/>
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -280,7 +269,7 @@ The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6C
           </div>
           <div class="col-lg-7">
             <p>
-	    I leave this up to the community to determine. Otherwise, people will just be getting rugged to get some Dogelon. I expect this currency to be more coveted than not just Ethereum but also Dogecoin. Which I shall from this day forward be referring to as Test Doge.
+	    I leave this up to the community to determine. Otherwise, people will just be getting rugged to get some CPT. I expect this currency to be more coveted than  Ethereum.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -288,11 +277,11 @@ The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6C
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Are you really Elon?</h4>
+            <h4>Are you really Capitan?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-	    Yes, my name is Elon.
+	    Yes, I'm a capitan.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -310,17 +299,17 @@ The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6C
       <div class="row d-flex align-items-center">
         <div class="col-lg-3 text-lg-left text-center">
           <div class="copyright">
-            <strong>Dogelon (ELON)</strong>
+            <strong>Capitan Token (CPT)</strong>
           </div>
         </div>
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
             <a href="#token" class="scrollto">Token</a>
             <a href="#about" class="scrollto">About</a>
-            <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Uniswap</a>
+            <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xef166742d1d59c39b8db51aab3f7fb16b8f870bc" target="_blank">Pancakeswap</a>
             <a href="#faq" class="scrollto">FAQ</a>
-            <a href="javascript:if(confirm(%27https://coinmarketcap.com/currencies/dogelon/  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coinmarketcap.com/currencies/dogelon/%27" tppabs="https://coinmarketcap.com/currencies/dogelon/" target="_blank">CoinMarketCap</a>
-	    <a href="javascript:if(confirm(%27https://coingecko.com/en/coins/dogelon-mars  \n\nThis file was not retrieved by Teleport Pro, because it is addressed using an unsupported protocol (e.g., gopher).  \n\nDo you want to open it from the server?%27))window.location=%27https://coingecko.com/en/coins/dogelon-mars%27" tppabs="https://coingecko.com/en/coins/dogelon-mars" target="_blank">CoinGecko</a>
+            <a href="http://capitantoken.cf/client-7.jpg" target="_blank">CoinMarketCap</a>
+	    <a href="http://capitantoken.cf/client-7.jpg" target="_blank">CoinGecko</a>
           </nav>
         </div>
       </div>
@@ -330,16 +319,16 @@ The contract address is: <a href="https://etherscan.io/token/0x761D38e5ddf6ccf6C
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="aos.js" tppabs="http://dogelon.io/assets/vendor/aos/aos.js"></script>
-  <script src="bootstrap.bundle.min.js" tppabs="http://dogelon.io/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="glightbox.min.js" tppabs="http://dogelon.io/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="isotope.pkgd.min.js" tppabs="http://dogelon.io/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="validate.js" tppabs="http://dogelon.io/assets/vendor/php-email-form/validate.js"></script>
-  <script src="purecounter.js" tppabs="http://dogelon.io/assets/vendor/purecounter/purecounter.js"></script>
-  <script src="swiper-bundle.min.js" tppabs="http://dogelon.io/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="aos.js" tppabs="http://capitantoken.cf/aos.js"></script>
+  <script src="bootstrap.bundle.min.js" tppabs="http://capitantoken.cf/bootstrap.bundle.min.js"></script>
+  <script src="glightbox.min.js" tppabs="http://capitantoken.cf/glightbox.min.js"></script>
+  <script src="isotope.pkgd.min.js" tppabs="http://capitantoken.cf/isotope.pkgd.min.js"></script>
+  <script src="validate.js" tppabs="http://capitantoken.cf/validate.js"></script>
+  <script src="purecounter.js" tppabs="http://capitantoken.cf/purecounter.js"></script>
+  <script src="swiper-bundle.min.js" tppabs="http://capitantoken.cf/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="main.js" tppabs="http://dogelon.io/assets/js/main.js"></script>
+  <script src="main.js" tppabs="capitantoken.cf/main.js"></script>
 
 </body>
 
